add create topic view

--- a/efak-web/src/main/resources/templates/public/common.html
+++ b/efak-web/src/main/resources/templates/public/common.html
@@ -22,6 +22,7 @@
     <script src="../../assets/vendors/sweetalert2/sweetalert2.min.js"></script>
     <script src="../../assets/vendors/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendors/pace/pace.min.js"></script>
+    <script src="../../assets/vendors/bootstrap-maxlength/bootstrap-maxlength.min.js"></script>
     <!-- End plugin js for this page -->
 
     <!-- inject:js -->
