--- a/efak-web/src/main/resources/templates/topic/create.html
+++ b/efak-web/src/main/resources/templates/topic/create.html
@@ -20,6 +20,7 @@
 
     <!-- partial:menu -->
     <div th:replace="public/header :: menu_header"></div>
+    <div th:replace="public/navbar :: menu_navbar"></div>
     <!-- partial -->
 
     <div class="page-wrapper">
