--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -14,7 +14,7 @@
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.dataspace.dashboard}">Dashboard</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/clusters/manage" th:text="#{kafka.eagle.dataspace.dashboard}">Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.dataspace.tv}">TV</a></li>
                         </ul>
                     </div>
@@ -29,8 +29,8 @@
                         <ul class="submenu-item">
                             <li class="category-heading" th:text="#{kafka.eagle.topics.list}">Manager</li>
                             <li class="nav-item"><a class="nav-link" href="/topic/create" th:text="#{kafka.eagle.topics.create}">Create</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/topic/manage" th:text="#{kafka.eagle.topics.manager}">Manager</a>
                             <li class="nav-item"><a class="nav-link" href="#" th:utext="#{kafka.eagle.topics.ksql}">KSQL</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.manager}">Manager</a>
                             <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.mock}">Mock</a>
                             </li>
                             <li class="category-heading" th:text="#{kafka.eagle.topics.metadata}">Metadata
