add: login view

--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -215,7 +215,7 @@
                                     </a>
                                 </li>
                                 <li class="dropdown-item py-2">
-                                    <a href="#" class="text-body ms-0">
+                                    <a href="/logout" class="text-body ms-0">
                                         <i class="me-2 icon-md" data-feather="log-out"></i>
                                         <span th:text="#{kafka.eagle.account.signout}">Log Out</span>
                                     </a>
