--- a/efak-web/src/main/resources/statics/assets/css/public/login/login-custom.css
+++ b/efak-web/src/main/resources/statics/assets/css/public/login/login-custom.css
@@ -9,3 +9,12 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 input {
     background-color: transparent;
 }
+
+form-check-input[type=checkbox] {
+    border-radius: 0.15em;
+}
+
+.form-check-input {
+    margin-top: 0.13em;
+    margin-left: -25em;
+}
