--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <!-- navbar menu -->
 <div class="horizontal-menu" th:fragment="menu_navbar">
@@ -29,16 +30,17 @@
                         <ul class="submenu-item">
                             <li class="category-heading" th:text="#{kafka.eagle.topics.list}">Manager</li>
                             <li class="nav-item"><a class="nav-link" href="/topic/create" th:text="#{kafka.eagle.topics.create}">Create</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/topic/manage" th:text="#{kafka.eagle.topics.manager}">Manager</a>
+                            <li class="nav-item"><a class="nav-link" href="/topic/manage" th:text="#{kafka.eagle.topics.manager}">Manager</a></li>
                             <li class="nav-item"><a class="nav-link" href="#" th:utext="#{kafka.eagle.topics.ksql}">KSQL</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/topic/mock" th:text="#{kafka.eagle.topics.mock}">Mock</a>
-                            </li>
-                            <li class="category-heading" th:text="#{kafka.eagle.topics.metadata}">Metadata
-                            <li>
-                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.metadata.op}">MetadataOp</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance}">Balance</a>
-                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance.job}">Job</a>
-                            </li>
+                            <li class="nav-item"><a class="nav-link" href="/topic/mock" th:text="#{kafka.eagle.topics.mock}">Mock</a></li>
+                            <span sec:authorize="isAuthenticated()">
+                                <span sec:authorize="hasRole('ADMIN')">
+                                    <li class="category-heading" th:text="#{kafka.eagle.topics.metadata}">Metadata<li>
+                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.metadata.op}">MetadataOp</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance}">Balance</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.topics.balance.job}">Job</a></li>
+                                </span>
+                            </span>
                         </ul>
                     </div>
                 </li>
@@ -64,7 +66,6 @@
                     <div class="submenu">
                         <ul class="submenu-item">
                             <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.kafka}">Kafka</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.zookeeper}">Zookeeper</a></li>
                             <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.server}">Server</a></li>
                             <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.manager}">Manager</a></li>
                         </ul>
@@ -115,15 +116,19 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a href="#" target="_blank"
-                       class="nav-link">
+                    <a href="#" class="nav-link">
                         <i class="link-icon" data-feather="users"></i>
                         <span class="menu-title" th:text="#{kafka.eagle.system}">System</span>
+                        <i class="link-arrow"></i>
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.user}">Users</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.role}">Role</a></li>
+                            <span sec:authorize="isAuthenticated()">
+                                <span sec:authorize="hasRole('ADMIN')">
+                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.user}">Users</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.role}">Role</a></li>
+                                </span>
+                            </span>
                             <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.audit}">Audit</a></li>
                         </ul>
                     </div>
