--- a/efak-web/src/main/resources/templates/topic/meta.html
+++ b/efak-web/src/main/resources/templates/topic/meta.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" th:href="@{../../assets/vendors/select2/select2.min.css}">
     <link rel="stylesheet" th:href="@{../../assets/vendors/datatables.net-bs5/dataTables.bootstrap5.css}">
     <link rel="stylesheet" th:href="@{../../assets/css/public/cluster/manage.create.css}">
+    <link rel="stylesheet" th:href="@{../../assets/vendors/bootstrap-datepicker/daterangepicker.css}">
     <th:block th:replace="public/common :: css"></th:block>
 
 </head>
@@ -139,6 +140,31 @@
                             </div>
                         </div>
                     </div>
+                    <hr>
+                    <h4 id="efak_topic_meta_chart" th:utext="#{kafka.eagle.topic.meta.chart}"></h4>
+                    <div class="row">
+                        <div class="col-12 col-xl-12 grid-margin stretch-card">
+                            <div class="card overflow-hidden">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between align-items-baseline mb-4 mb-md-3">
+                                        <h6 class="card-title mb-0" th:text="#{kafka.eagle.dataspace.dashboard.messagein}"></h6>
+                                    </div>
+                                    <div class="row align-items-start">
+                                        <div class="col-md-7">
+                                            <p class="text-muted tx-13 mb-3 mb-md-0"
+                                               th:text="#{kafka.eagle.dataspace.dashboard.messagein.doc}"></p>
+                                        </div>
+                                        <div class="col-md-5 d-flex justify-content-md-end">
+                                            <div id="efak_topic_meta_date" class="ms-auto" style="border: 1px solid #ccc;cursor: pointer; padding: 5px 10px;">
+                                                <i data-feather="calendar" class="icon-md"></i> &nbsp; <span></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="efak_topic_meta_chart_msg"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xl-2 content-nav-wrapper">
                     <ul class="nav content-nav d-flex flex-column">
@@ -190,6 +216,8 @@
 <!-- plugins:js -->
 <script th:src="@{../../assets/vendors/datatables.net/jquery.dataTables.js}"></script>
 <script th:src="@{../../assets/vendors/datatables.net-bs5/dataTables.bootstrap5.js}"></script>
+<script th:src="@{../../assets/vendors/bootstrap-datepicker/moment.min.js}"></script>
+<script th:src="@{../../assets/vendors/bootstrap-datepicker/daterangepicker.js}"></script>
 <script th:src="@{../../assets/js/topic/topic.meta.js}"></script>
 
 </body>
