fixed: show max logsize

--- a/efak-web/src/main/resources/templates/topic/meta.html
+++ b/efak-web/src/main/resources/templates/topic/meta.html
@@ -43,7 +43,7 @@
                     <hr>
                     <h4 id="efak_topic_meta_summary" th:utext="#{kafka.eagle.topic.meta.summary}"></h4>
                     <div class="row">
-                        <div class="col-md-4 grid-margin stretch-card">
+                        <div id="efka_meta_panel1" class="col-md-4 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-baseline">
@@ -81,8 +81,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 grid-margin stretch-card"></div>
-                        <div class="col-md-4 grid-margin stretch-card">
+                        <div id="efka_meta_panel2" class="col-md-4 grid-margin stretch-card"></div>
+                        <div id="efka_meta_panel3" class="col-md-4 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-baseline">
