add: design produce monitor view

--- a/efak-web/src/main/resources/templates/topic/meta.html
+++ b/efak-web/src/main/resources/templates/topic/meta.html
@@ -155,8 +155,8 @@
                                                th:text="#{kafka.eagle.dataspace.dashboard.messagein.doc}"></p>
                                         </div>
                                         <div class="col-md-5 d-flex justify-content-md-end">
-                                            <div id="efak_topic_meta_date" class="ms-auto" style="border: 1px solid #ccc;cursor: pointer; padding: 5px 10px;">
-                                                <i data-feather="calendar" class="icon-md"></i> &nbsp; <span></span>
+                                            <div id="efak_topic_meta_date" class="ms-auto" style="border: 1px solid #6571ff;cursor: pointer; padding: 5px 10px;">
+                                                <i data-feather="calendar" class="icon-md text-primary"></i> &nbsp; <span></span>
                                             </div>
                                         </div>
                                     </div>
