--- a/efak-web/src/main/resources/templates/topic/manage.html
+++ b/efak-web/src/main/resources/templates/topic/manage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title th:text="#{kafka.eagle.topics.manager}">Manage - KafkaEagle</title>
+    <title th:text="#{kafka.eagle.topics.manager.title}">Manage - KafkaEagle</title>
 
     <link rel="stylesheet" th:href="@{../../assets/vendors/datatables.net-bs5/dataTables.bootstrap5.css}">
 
