--- a/efak-web/src/main/resources/templates/topic/mock.html
+++ b/efak-web/src/main/resources/templates/topic/mock.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title th:text="#{kafka.eagle.topics.mock}"></title>
+    <title th:text="#{kafka.eagle.topics.mock.title}"></title>
 
     <link rel="stylesheet" th:href="@{../../assets/vendors/dropify/dist/dropify.min.css}">
     <link rel="stylesheet" th:href="@{../../assets/vendors/select2/select2.min.css}">
